--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -24,19 +24,54 @@
             </div>
         </div>
         <div class="control">
-            <button class="button is-info" id="create-btn" type="submit">Shorten</button>
+            <button class="button is-primary" id="create-btn" type="submit">Shorten</button>
         </div>
     </form>
 
     <hr style="border-style: inset;border-width: 1px;">
+
+    <div class="field">
+        <div class="field-label pb-1" style="text-align: left;">
+            <label class="label">Sort By</label>
+        </div>
+        <div class="field-body">
+            <form class="field is-narrow has-addons">
+                <select name="page" class="is-hidden">
+                    <option value="{{current_page}}" selected></option>
+                </select>
+                <div class="control">
+                    <div class="select">
+                        <select name="sortby" title="Sort By">
+                            <option value="key">Username</option>
+                            <option value="destination">Destination</option>
+                            <option value="clicks">Clicks</option>
+                            <option value="creation_date">Creation date</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="control">
+                    <div class="select">
+                        <select name="direction" title="Direction">
+                            <option value="desc" selected>Descending</option>
+                            <option value="asc">Ascending</option>
+                        </select>
+                    </div>
+                </div>
+                <button class="button is-primary" type="submit">
+                    Go
+                </button>
+            </form>
+        </div>
+    </div>
+
     <div class="table-container">
-        <table class="table is-striped is-hoverable is-fullwidth is-bordered" data-row-len="{{len(values)}}">
+        <table class="table is-striped is-hoverable is-fullwidth is-bordered">
             <thead>
                 <tr>
-                    <th><a href="/dashboard/shortner?page={{current_page}}&sort=key&direction={{direction if last_sort == 'key' else 'desc'}}">Key</a></th>
-                    <th><a href="/dashboard/shortner?page={{current_page}}&sort=destination&direction={{direction if last_sort == 'destination' else 'desc'}}">Destination</a></th>
-                    <th><a href="/dashboard/shortner?page={{current_page}}&sort=clicks&direction={{direction if last_sort == 'clicks' else 'desc'}}">Clicks</a></th>
-                    <th><a href="/dashboard/shortner?page={{current_page}}&sort=creation_date&direction={{direction if last_sort == 'creation_date' else 'desc'}}">Creation Date</a></th>
+                    <th>Key</th>
+                    <th>Destination</th>
+                    <th>Clicks</th>
+                    <th>Creation Date</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -84,9 +119,9 @@
         <div class="modal-content">
             <div class="box">
             <div>
-                <h2 class="title is-2">Danger</h2>
-                <p id="delete-text"></p>
-                <button class="button is-danger block mt-2" id="delete-btn">Delete Short URL</button>
+                <h2 class="is-size-2">Danger</h2>
+                <p id="delete-text" class="pb-2"></p>
+                <button class="button is-danger block" id="delete-btn">I understand the consequences</button>
             </div>
             <footer class="is-size-7 mt-3">Click anywhere to exit</footer>
             </div>
