--- a/templates/dashboard/users.html
+++ b/templates/dashboard/users.html
@@ -5,12 +5,8 @@ URL Shortner
 {% endblock title %}
 
 {% block main %}
-    <div>
-        <h2 class="title is-2">Manage Users</h2>
-        <hr style="border-style: inset;border-width: 1px;">
-    </div>
-
-    
+    <h2 class="title is-2 pb-0 mb-0 pt-0 mt-0">Manage Users</h2>
+    <hr style="border-style: inset;border-width: 1px;">
 
     <div class="field">
         <div class="field-label pb-1" style="text-align: left;">
@@ -20,8 +16,8 @@ URL Shortner
             <form class="field is-narrow has-addons">
                 <div class="control">
                     <div class="select">
-                        <select name="sortby" title="Sort By">
-                            <option value="username" selected>Username</option>
+                        <select name="sortby" title="Sort By" id="sortby">
+                            <option value="username">Username</option>
                             <option value="user_id">User ID</option>
                             <option value="authorized" selected>Authorized</option>
                             <option value="oauth_provider">Provider</option>
@@ -31,7 +27,7 @@ URL Shortner
                 </div>
                 <div class="control">
                     <div class="select">
-                        <select name="direction" title="Direction">
+                        <select name="direction" title="Direction" id="direction">
                             <option value="desc" selected>Descending</option>
                             <option value="asc">Ascending</option>
                         </select>
