some template things

--- a/templates/dashboard/settings.html
+++ b/templates/dashboard/settings.html
@@ -34,7 +34,7 @@ Settings
           <div class="box">
             <div id="regen-content">
                 <h2 class="is-size-2">Danger</h2>
-                <p class="pb-2">Clicking this button will immediately revoke your current API Key and generate a new one. You will not be able to use your old API Key anymore.</p>
+                <p class="mb-2">Clicking this button will immediately revoke your current API Key and generate a new one. You will not be able to use your old API Key anymore.</p>
                 <button class="button is-danger block mt-2" id="regen-btn">I understand the consequences</button>
             </div>
             <p class="is-hidden" id="regen-success">Successfully regenerated your API Key</p>
@@ -50,7 +50,7 @@ Settings
           <div class="box">
             <div>
                 <h2 class="is-size-2">Danger</h2>
-                <p class="pb-2">Clicking this button will delete your account, including all items you have created.</p>
+                <p class="mb-2">Clicking this button will delete your account, including all items you have created.</p>
                 <form class="field" id="delete-form">
                     <label class="label">Enter your username</label>
                     <div class="control">
