--- a/templates/dashboard/users.html
+++ b/templates/dashboard/users.html
@@ -5,11 +5,11 @@ URL Shortner
 {% endblock title %}
 
 {% block main %}
-    <h2 class="title is-2 pb-0 mb-0 pt-0 mt-0">Manage Users</h2>
-    <hr style="border-style: inset;border-width: 1px;">
+    <h1 class="title">Manage Users</h1>
+    <h2 class="subtitle mb-2">Authorize, unauthorize, and delete users</h2>
 
     <div class="field">
-        <div class="field-label pb-1" style="text-align: left;">
+        <div class="field-label mb-1" style="text-align: left;">
             <label class="label">Sort By</label>
         </div>
         <div class="field-body">
