--- a/templates/dashboard/layout.html
+++ b/templates/dashboard/layout.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
-    <div class="container pt-5" style="padding-left: 32px;padding-right: 32px;">
+    <div class="m-4">
         <div class="columns">
             <div class="column is-3">
-                <aside class="menu box">
+                <aside class="menu">
                     <p class="menu-label">
                         Services
                     </p>
