login with username/password

--- a/templates/dashboard/layout.html
+++ b/templates/dashboard/layout.html
@@ -20,7 +20,7 @@
                     </p>
                     <ul class="menu-list">
                         <li><a href="/dashboard/settings" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/settings') else ''}}">Settings</a></li>
-                        <li><a class="has-text-danger" href="/api/auth/logout">Logout</a></li>
+                        <li><a class="has-text-danger" href="/auth/logout">Logout</a></li>
                     </ul>
                   </aside>
             </div>
