--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="table-container">
-        <table class="table is-striped is-hoverable is-fullwidth is-bordered">
+        <table class="table is-striped is-hoverable is-fullwidth is-bordered is-narrow">
             <thead>
                 <tr>
                     <th>Key</th>
