should fix layout

--- a/templates/dashboard/layout.html
+++ b/templates/dashboard/layout.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="m-4">
         <div class="columns">
-            <div class="column is-3">
+            <div class="column is-narrow">
                 <aside class="menu">
                     <p class="menu-label">
                         Services
@@ -24,7 +24,7 @@
                     </ul>
                   </aside>
             </div>
-            <div class="column is-9">
+            <div class="column">
                 {% block main %}
                 {% endblock %}
             </div>
