--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -34,9 +34,7 @@
         </div>
         <div class="field-body">
             <form class="field is-narrow has-addons">
-                <select name="page" class="is-hidden">
-                    <option value="{{current_page}}" selected></option>
-                </select>
+                <input name="page" class="is-hidden" value="{{current_page}}">
                 <div class="control">
                     <div class="select">
                         <select name="sortby" title="Sort By" id="sortby">
