forgot to change the value

--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -38,7 +38,7 @@
                 <div class="control">
                     <div class="select">
                         <select name="sortby" title="Sort By" id="sortby">
-                            <option value="key">Username</option>
+                            <option value="key">Key</option>
                             <option value="destination">Destination</option>
                             <option value="clicks">Clicks</option>
                             <option value="creation_date" selected>Creation date</option>
