--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -26,7 +26,7 @@
                     <div class="field">
                         <label class="label">Email</label>
                         <div class="control">
-                            <input id="email" name="email" class="input {{'is-danger' if email_error else ''}}" type="email" placeholder="Your email">
+                            <input id="email" name="email" class="input {{'is-danger' if email_error else ''}}" type="text" placeholder="Your email">
                             {% if email_error %}
                                 {% for error in email_error %}
                                     <p class="help is-danger">{{error}}</p>
