remove misleading text

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -11,7 +11,7 @@
         <div class="tile is-parent">
         <article class="tile is-child box">
             <p class="title">Images</p>
-            <p class="subtitle">You have 30 uploaded images</p>
+            <p class="subtitle">This feature is planned for some time in the future.</p>
         </article>
         </div>
         <div class="tile is-parent">
