settings, session management, sharex config, db rewrites

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -6,12 +6,13 @@
 
 {% block main %}
     <h1 class="title">Hello, {{request["user"]["username"]}}</h1>
-    <h2 class="subtitle mb-2">Welcome to the <code>mzf.one</code> dashboard</h2>
+    <h2 class="subtitle mb-3">Welcome to the <code>mzf.one</code> dashboard</h2>
+
     <div class="tile is-ancestor">
         <div class="tile is-parent">
         <article class="tile is-child box">
             <p class="title">Images</p>
-            <p class="subtitle">This feature is planned for some time in the future.</p>
+            <p class="subtitle">This feature is a work in progress</p>
         </article>
         </div>
         <div class="tile is-parent">
