--- a/templates/dashboard/settings/index.html
+++ b/templates/dashboard/settings/index.html
@@ -1,10 +1,12 @@
-{% extends "dashboard/layout.html" %}
+{% extends "dashboard/settings/layout.html" %}
 
 {% block title %}
 Settings
 {% endblock title %}
 
-{% block main %}
+{% block main2 %}
+    <h1 class="title mb-3">Settings</h1>
+
     <div class="box">
         <h2 class="title is-2">API Key</h2>
         <div class="control">
