--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -5,8 +5,7 @@
 {% endblock title %}
 
 {% block main %}
-    <h1 class="title">URL Shortner</h1>
-    <h2 class="subtitle mb-2">View and create shortened URLs</h2>
+    <h1 class="title mb-3">URL Shortner</h1>
 
     <form class="field" id="create-form" autocomplete="off">
         <div class="field">
@@ -36,20 +35,19 @@
             <form class="field is-narrow has-addons">
                 <div class="control">
                     <div class="select">
-                        <select name="sortby" title="Sort By" id="sortby">
-                            <option value="key">Key</option>
-                            <option value="destination">Destination</option>
-                            <option value="clicks">Clicks</option>
-                            <option value="creation_date" selected>Creation date</option>
+                        <select name="sortby" title="Sort By">
+                            <option value="key" {% if sortby == "key" %}selected{% endif %}>Key</option>
+                            <option value="destination" {% if sortby == "destination" %}selected{% endif %}>Destination</option>
+                            <option value="clicks" {% if sortby == "clicks" %}selected{% endif %}>Clicks</option>
+                            <option value="creation_date" {% if sortby == "creation_date" or not sortby %}selected{% endif %}>Creation date</option>
                         </select>
                     </div>
                 </div>
                 <div class="control">
                     <div class="select">
-                        <select name="direction" title="Direction" id="direction">
-                            <option class="is-hidden" selected></option>
-                            <option value="desc" selected>Descending</option>
-                            <option value="asc">Ascending</option>
+                        <select name="direction" title="Direction">
+                            <option value="desc" {% if direction == "desc" or not direction %}selected{% endif %}>Descending</option>
+                            <option value="asc" {% if direction == "asc" %}selected{% endif %}>Ascending</option>
                         </select>
                     </div>
                 </div>
