--- a/templates/dashboard/settings/shortner.html
+++ b/templates/dashboard/settings/shortner.html
@@ -5,8 +5,6 @@
 {% endblock  %}
 
 {% block main2 %}
-    <h1 class="title mb-3">URL Shortner Settings</h1>
-
-    <a class="button is-link" href="/dashboard/shortner/sharex">Download ShareX config</a><br>
+    <a class="button is-link mb-2" href="/dashboard/shortner/sharex">Download ShareX config</a><br>
     <a class="is-underlined" href="https://getsharex.com/docs/custom-uploader" target="_blank">ShareX Custom Uploader Docs</a>
 {% endblock  %}
