too large margin

--- a/templates/dashboard/settings/layout.html
+++ b/templates/dashboard/settings/layout.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/layout.html' %}
 
 {% block main %}
-    <div class="title">Settings</div>
+    <div class="title mb-3">Settings</div>
 
     <div class="tabs mb-3">
         <ul>
