--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body%}
-    <div class="container">
+    <div class="container ml-2 mr-2">
         <div class="columns is-centered mt-3">
             <div class="column is-5">
                 <form action="/auth/{{'signup' if type == 'signup' else 'login'}}" method="POST">
