--- a/templates/dashboard/shortner/layout.html
+++ b/templates/dashboard/shortner/layout.html
@@ -6,7 +6,15 @@
     <div class="tabs mb-3">
         <ul>
             <li class="{{'is-active' if request.rel_url.path == '/dashboard/shortner' }}"><a href="/dashboard/shortner">View All</a></li>
-            <li class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortner/create') }}"><a href="/dashboard/shortner/create">Create</a></li>
+            <li class="{{'is-active' if request.rel_url.path == '/dashboard/shortner/create' }}"><a href="/dashboard/shortner/create">Create</a></li>
+            {% if key %}
+                {% if request.rel_url.path == "/dashboard/shortner/" + key + "/edit" %}
+                    <li class="is-active"><a>Edit</a></li>
+                {% endif %}
+                {% if request.rel_url.path == "/dashboard/shortner/" + key + "/delete" %}
+                    <li class="is-active"><a>Delete</a></li>
+                {% endif %}
+            {% endif %}
         </ul>
     </div>
 
