--- a/templates/dashboard/shortner/edit.html
+++ b/templates/dashboard/shortner/edit.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/shortner/layout.html' %}
 
 {% block title %}
-    Edit Short Url {{key}}
+    Edit Short Url
 {% endblock title %}
 
 {% block main2 %}
