--- a/templates/dashboard/shortner/delete.html
+++ b/templates/dashboard/shortner/delete.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/shortner/layout.html' %}
 
 {% block title %}
-    Delete Short Url {{key}}
+    Delete Short Url
 {% endblock title %}
 
 {% block main2 %}
@@ -15,8 +15,12 @@
             </div>
         </article>
     {% else %}
-        <p class="mb-3">Are you sure that you want to delete short URL with key <code>{{key}}</code> pointing to <code>{{destination}}</code> with <code>{{clicks}}</code> clicks?</p>
-
+        <p class="mb-3">Are you sure that you want to delete this short URL?</p>
+        <pre class="mb-3">
+Key: {{key}}
+Destination: {{destination}}
+Clicks: {{clicks}}</pre>
+        <p class="mb-3">The link will immediately not work, and the key will be able to be taken by someone else. You cannot undo this action.</p>
         <form method="POST">
             <div class="field">
                 <button class="button is-danger" type="submit">Yes, I want to delete this short URL</button>
