--- a/templates/dashboard/settings/index.html
+++ b/templates/dashboard/settings/index.html
@@ -5,7 +5,7 @@ Settings
 {% endblock title %}
 
 {% block main2 %}
-    <div class="box">
+    <div class="box {{' is-hidden' if user['authorized'] is false}}">
         <h2 class="title is-2">API Key</h2>
         <div class="control">
             <input id="api-key" class="input block" type="password" readonly value="{{user['api_key']}}"/>
