--- a/templates/dashboard/settings/layout.html
+++ b/templates/dashboard/settings/layout.html
@@ -7,7 +7,9 @@
         <ul>
             <li class="{{'is-active' if request.rel_url.path == '/dashboard/settings' }}"><a href="/dashboard/settings">General</a></li>
             <li class="{{'is-active' if request.rel_url.path.startswith('/dashboard/settings/sessions') }}"><a href="/dashboard/settings/sessions">Sessions</a></li>
-            <li class="{{'is-active' if request.rel_url.path.startswith('/dashboard/settings/shortner') }}"><a href="/dashboard/settings/shortner">Shortner</a></li>
+            {% if user["authorized"] is true %}
+                <li class="{{'is-active' if request.rel_url.path.startswith('/dashboard/settings/shortner') }}"><a href="/dashboard/settings/shortner">Shortner</a></li>
+            {% endif %}
         </ul>
     </div>
 
