make <a> whole button

--- a/templates/dashboard/shortner/index.html
+++ b/templates/dashboard/shortner/index.html
@@ -57,7 +57,7 @@
                         <td>
                             <div class="buttons">
                                 <button class="button is-info is-small copy-btn" data-target="{{url['key']}}-key">Copy</button>
-                                <button class="button is-warning is-small"><a href="/dashboard/shortner/{{url['key']}}/edit" class="has-text-dark">Edit</a></button>
+                                <a href="/dashboard/shortner/{{url['key']}}/edit" class="button is-warning is-small">Edit</a>
                             </div>
                         </td>
                     </tr>
