make <a> whole button

--- a/templates/dashboard/settings/index.html
+++ b/templates/dashboard/settings/index.html
@@ -38,8 +38,8 @@ Settings
     <div class="box">
         <h2 class="title is-2">Account Management</h2>
         <div class="buttons has-addons">
-            <button class="button is-warning"><a href="/dashboard/users/{{user['id']}}/edit" class="has-text-dark">Edit Account</a></button>
-            <button class="button is-danger"><a href="/dashboard/users/{{user['id']}}/delete" class="has-text-light">Delete Account</a></button>
+            <a href="/dashboard/users/{{user['id']}}/edit" class="button is-warning">Edit Account</a>
+            <a href="/dashboard/users/{{user['id']}}/delete" class="button is-danger">Delete Account</a>
         </div>
     </div>
 
