--- a/templates/dashboard/shortner/edit.html
+++ b/templates/dashboard/shortner/edit.html
@@ -45,7 +45,7 @@
             <div class="field">
                 <div class="buttons">
                     <button class="button is-info" type="submit">Save</button>
-                    <button class="button is-danger"><a href="/dashboard/shortner/{{key}}/delete" class="has-text-light">Delete</a></button>
+                    <a href="/dashboard/shortner/{{key}}/delete" class="button is-danger">Delete</a>
                 </div>
             </div>
         </form>
