--- a/templates/dashboard/users/edit.html
+++ b/templates/dashboard/users/edit.html
@@ -58,7 +58,7 @@
                 <div class="buttons">
                     <button class="button is-info" type="submit">Save</button>
                     {% if not is_self %}
-                        <button class="button is-danger"><a href="/dashboard/users/{{id}}/delete" class="has-text-light">Delete</a></button>
+                        <a href="/dashboard/users/{{id}}/delete" class="button is-danger">Delete</a>
                     {% endif %}
                 </div>
             </div>
