forgot to close tag

--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -63,5 +63,5 @@
         </div>
     </div>
 
-    <script src="/static/js/onboarding.js"
+    <script src="/static/js/onboarding.js"></script>
 {% endblock %}
