--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -36,7 +36,7 @@
                         <div class="control">
                             <input id="password" name="password" class="input {{'is-danger' if password_error else ''}}" type="password" placeholder="A secure password">
                             {% if password_error %}
-                                <p class="help is-danger">{{email_error[0]}}</p>
+                                <p class="help is-danger">{{password_error[0]}}</p>
                             {% endif %}
                         </div>
                     </div>
