--- a/templates/dashboard/users/edit.html
+++ b/templates/dashboard/users/edit.html
@@ -28,7 +28,7 @@
 
             <div class="field">
                 <label class="label">Username</label>
-                <input class="input" type="text" value="{{username}}" name="username">
+                <input class="input {{'is-danger' if username_error else ''}}" type="text" value="{{username}}" name="username">
                 {% if username_error %}
                     <p class="help is-danger">{{username_error[0]}}</p>
                 {% endif %}
@@ -36,7 +36,7 @@
 
             <div class="field">
                 <label class="label">Email</label>
-                <input class="input" type="email" value="{{email}}" name="email">
+                <input class="input {{'is-danger' if email_error else ''}}" type="email" value="{{email}}" name="email">
                 {% if email_error %}
                     <p class="help is-danger">{{email_error[0]}}</p>
                 {% endif %}
@@ -44,17 +44,26 @@
 
             <div class="field">
                 <label class="label">Authorized</label>
-                {% if is_self == True %}
+                {% if is_self is true %}
                     <input name="authorized" value="{{user['authorized']}}" type="hidden">
+                    <label class="radio" disabled>
+                        <input type="radio" name="authorized" value="True" {% if authorized == True %}checked{% endif%} disabled>
+                        True
+                    </label>
+                    <label class="radio" disabled>
+                        <input type="radio" name="authorized" value="False" {% if authorized != True %}checked{% endif%} disabled>
+                        False
+                    </label>
+                {% else %}
+                    <label class="radio">
+                        <input type="radio" name="authorized" value="True" {% if authorized == True %}checked{% endif%}>
+                        True
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="authorized" value="False" {% if authorized != True %}checked{% endif%}>
+                        False
+                    </label>
                 {% endif %}
-                <label class="radio" {% if is_self == True %}disabled{% endif%}>
-                    <input type="radio" name="authorized" value="True" {% if authorized == True %}checked{% endif%} {% if is_self == True %}disabled{% endif%}>
-                    True
-                </label>
-                <label class="radio" {% if is_self == True %}disabled{% endif%}>
-                    <input type="radio" name="authorized" value="False" {% if authorized != True %}checked{% endif%} {% if is_self == True %}disabled{% endif%}>
-                    False
-                </label>
             </div>
             
             <div class="field">
